# cricinfo-scraper

./: README.md  cricinfo_ipl_scraper_dag.py  pyproject.toml
airflow/dags/: cricinfo_ipl_scraper.py
cricinfo_scraper/: batters_cleaner.ipynb  batters_cleaning.py  batters_totals.py  cricinfo-scraper.py  cricinfo_link_scraper.py  cricinfo_scorecard_scraper.py  cricinfo_scraper.py  pandas_scraper  pandas_scraper.py
dags/: cricinfo_ipl_scraper_dag.py
data/: README.md
tests/: cricinfo_snapshot.html  test_cricinfo_scraper.py
