[tool.poetry]
name = "cricinfo-scraper"
version = "0.1.0"
description = ""
authors = ["Vieran <vieran.nijjar@bjss.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.3.0"
webdriver-manager = "^3.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.5"
black = "^22.6.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
